syntax = "proto3";

package messaging.v1;

option go_package = "messaging-service/proto;messagingpb";

import "google/protobuf/timestamp.proto";

message Conversation {
  string id = 1;
  string listing_id = 2;
  repeated string participants = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp last_message_at = 5;
  string last_message_id = 6;
  string last_message_sender_id = 7;
  bool has_unread = 8;
}

message Message {
  string id = 1;
  string conversation_id = 2;
  string sender_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetOrCreateConversationForListingRequest {
  string listing_id = 1;
  string guest_id = 2;
  string host_id = 3;
}

message GetConversationRequest {
  string conversation_id = 1;
}

message GetConversationResponse {
  Conversation conversation = 1;
}

message SendMessageRequest {
  string conversation_id = 1;
  string sender_id = 2;
  string text = 3;
}

message SendMessageResponse {
  Message message = 1;
}

message ListMessagesRequest {
  string conversation_id = 1;
  int32 limit = 2;
  string before = 3;
}

message ListMessagesResponse {
  repeated Message messages = 1;
  string next_cursor = 2;
}

message ListConversationsRequest {
  string user_id = 1;
  int32 limit = 2;
  string cursor = 3;
  bool include_all = 4;
}

message ListConversationsResponse {
  repeated Conversation conversations = 1;
  string next_cursor = 2;
}

message MarkConversationReadRequest {
  string conversation_id = 1;
  string user_id = 2;
  string last_read_message_id = 3;
}

service MessagingService {
  rpc GetOrCreateConversationForListing(GetOrCreateConversationForListingRequest) returns (GetConversationResponse);
  rpc GetConversation(GetConversationRequest) returns (GetConversationResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);
  rpc MarkConversationRead(MarkConversationReadRequest) returns (.google.protobuf.Timestamp);
}
